--- a/src/popup.html
+++ b/src/popup.html
@@ -5,8 +5,6 @@
     <!--<script src="popup.js"></script>-->
   </head>
   <body>
-    <p><a target="_blank" href="http://github.com/samhocevar/expose-nfts">Visit Webpage</a></p>
-    <!--<h1>DTCloud™</h1>
-    <button id="checkPage">Lol What?</button>-->
+    <p><a target="_blank" href="http://github.com/samhocevar/no-fucking-thanks">Visit&nbsp;webpage</a></p>
   </body>
 </html>
